--- a/html/3-Purpleschool/styles/header.css
+++ b/html/3-Purpleschool/styles/header.css
@@ -1,29 +1,72 @@
+/* Header */
+
 .header {
   background-color: var(--color-bg-medium);
-
 }
 
 .header__wrapper {
-  max-width: 1220px;
+  max-width: var(--layout-width);
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: var(--block-padding);
 }
+
+.header__login {
+  color: var(--color-text);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  line-height: 21.6px;
+  text-align: left;
+}
+
+.header__login:hover {
+  color: var(--color-link-hover);
+}
+
+.header__mobile-menu-button {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+@media (max-width: 960px) {
+  .header__login {
+    display: none;
+  }
+
+  .header__mobile-menu-button {
+    display: block;
+  }
+
+  .header__logo {
+    max-width: 174px;
+  }
+
+}
+
+
+/* Menu */
 
 .menu {
   display: flex;
-  gap: 56px;
+  gap: 40px;
   list-style: none;
+  margin: 0;
+}
+
+.menu__item {
+  padding: 8px 16px;
 }
 
 .menu__item a {
-    font-family: Fira Sans;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 21.6px;
-    text-align: left;
-    color: var(--color-text);
+  font-size: 18px;
+  line-height: 21.6px;
+  text-align: left;
+  color: var(--color-text);
 }
 
 .menu__item a:hover {
@@ -33,4 +76,16 @@
 .menu__item_active a {
   border: 1px solid var(--color-stroke);
   border-radius: var(--border-8);
+}
+
+@media (max-width: 960px) {
+  .menu {
+    display: none;
+  }
+}
+
+@media (max-width: 960px) {
+  .header__wrapper {
+    padding: 30px 24px;
+  }
 }
