Added lessons about grid

--- a/html/miro-1/style.css
+++ b/html/miro-1/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    margin: 0 auto;
-    max-width: 1200px;
+    /*   margin: 0 auto;
+    max-width: 1200px; */
 }
 
 /* *::selection {
@@ -35,6 +35,19 @@ h2 {
     color: #cdd0de;
 }
 
+main,
+footer>div {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+footer>div {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    min-height: inherit;
+}
+
 section {
     color: #05003899;
     margin-bottom: 160px;
@@ -43,8 +56,9 @@ section {
     gap: 60px;
 }
 
-.about-tabs, .work {
-    gap:100px;
+.about-tabs,
+.work {
+    gap: 100px;
 }
 
 .section-header {
@@ -54,6 +68,12 @@ section {
     letter-spacing: 1px;
     text-align: left;
     /*  width: 59%; */
+}
+
+header nav {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px;
 }
 
 .hero {
@@ -132,9 +152,6 @@ footer {
     background: #050038;
     color: #fff;
     min-height: 117px;
-    display: flex;
-    align-items: center;
-    gap: 30px
 }
 
 footer a {
@@ -188,6 +205,7 @@ footer ul li {
 
 .sectionList {
     list-style: none;
+    margin-bottom: 32px;
 }
 
 #heroButton:active {
@@ -220,6 +238,7 @@ div.experimantal#exper {
     border: 3px solid;
 
     margin: 30px;
+
 }
 
 .border1 {
