--- a/html/3-Purpleschool/styles/global.css
+++ b/html/3-Purpleschool/styles/global.css
@@ -12,6 +12,7 @@
   --border-5: 5px;
   --border-8: 8px;
   --border-10: 10px;
+  --border-17: 17px;
   --color-button-bg: #6C38CC;
   --layout-width: 1172px;
   --gradient: linear-gradient(93.32deg, #d77BE6 9.26%, #be63E6 24.32%, #6c38cc 104.58%);
